--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,7 +10,7 @@
      <%= submit_tag '登录', :class => 'input_button_small'%>
      <% end %>  
     </li>
-    <li><%= link_to '注册'%></li>
+    <li><%= link_to '注册', signup_path %></li>
 </ul>
 
   </div>
