--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -101,8 +101,8 @@
 </table>
 <!-- Start Browsing Panel -->
 <div id="start_browsing">
-  <img src="/new/site_flashden.net/home/start_browsing.jpg" id="browsing_title">
-  <img src="/new/site_flashden.net/home/icon_browse.jpg" id="browsing_icon">
+  <img src="../images/image/start_browsing.jpg" id="browsing_title">
+  <img src="../images/image/icon_browse.jpg" id="browsing_icon">
   <ul class="tabs">
     <li><a href="javascript:tabswitch('1', 3, 'tab', 'panel');" id="tab_1" class="active">Recent</a></li>
     <li><a href="javascript:tabswitch('2', 3, 'tab', 'panel');" id="tab_2">Popular</a></li>
@@ -806,8 +806,8 @@ swfobject.embedSWF("../images/image/homepage.swf", "flash_item_container", "341"
       <div id="start_browsing">
 
 
-        <img src="/new/site_flashden.net/home/start_browsing.jpg" id="browsing_title">
-        <img src="/new/site_flashden.net/home/icon_browse.jpg" id="browsing_icon">
+        <img src="../images/image/start_browsing.jpg" id="browsing_title">
+        <img src="../images/image/icon_browse.jpg" id="browsing_icon">
         <ul class="tabs">
           <li><a href="javascript:tabswitch('1', 3, 'tab', 'panel');" id="tab_1" class="active">Recent</a></li>
           <li><a href="javascript:tabswitch('2', 3, 'tab', 'panel');" id="tab_2">Popular</a></li>
