--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,38 +3,23 @@
 <div id="body" class="with-tabs">
   <div id="wrap">
     <div class="content">
-
       <div class='alert'>
         <div id="notice"><%= flash[:notice] %></div>
-
       </div>
-
       <div class="item_preview">
-
         <img alt="Default-home2" src="../images/image/default-Home2.jpg?1230682441" />
-
       </div>
-
     </div>
     <div id="sidebar">
-
       <h3><%= logged_in_user.username %></h3>
       <div class="content">
-        <a href="/user/lovelyfrog">
-
-          <img alt="Default-profile" height="80" src="../images/image/default-Profile.jpg?1230682441" width="80" />
-
-        </a>
+        <a href="/user/lovelyfrog"><img alt="Default-profile" height="80" src="../images/image/default-Profile.jpg?1230682441" width="80" /></a>
         <br />
         <small>Member Since</small>
-
         January 2009
       </div>
-
     </div>
-
     <div style="clear:both;"></div>
-  </div>	
-</div>	
+  </div>
+</div>
 <!-- END BODY -->
-
