--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,21 +3,12 @@
     <ul>
       <li class="left"><a href="http://envato.com"><img src="/new/site_flashden.net/interface/eden.jpg"></a></li>
       <li>
-      <a href="/category/flash">
-        <strong>
-          6,073
-        </strong> Flash
-      </a>  
-      <a href="/category/fonts">
-        <strong>
-          62
-        </strong> Fonts
-      </a>  
+      <a href="/category/flash"><strong> 6,073 </strong> Flash </a>
+      <a href="/category/fonts"><strong> 62 </strong> Fonts </a>
       </li>
-      <li class="right"><a href="/"><strong>
-          108,092
-      </strong> Members</a></li>
+      <li class="right">
+      <a href="/"><strong> 108,092 </strong> Members</a>
+      </li>
     </ul>
   </div>
 </div>
-
