--- a/app/views/accounts/login.html.erb
+++ b/app/views/accounts/login.html.erb
@@ -27,7 +27,7 @@
       </fieldset>
     </div>
     <div id="sidebar">
-      <h3>Don't have an account?</h3>
+      <h3>没有帐户？？</h3>
       <div class="content">
         <p>Registering for an account is free and gives you access to:</p>
         <ul>
@@ -39,7 +39,7 @@
         </ul>
         <p>What are you waiting for? </p>
         <div align="center">
-          <a href="/signup" class="link_button">Sign Up Now</a>
+          <a href="/signup" class="link_button">立即注册</a>
         </div>
       </div>
     </div>
