--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,22 +1,24 @@
 <%= render :partial => 'top' %>
 <!-- START BODY -->
-<div id="body" class="with-tabs">
+<div id="body" class="with_tabs">
   <div id="wrap">
     <div class="content">
+      <% if flash[:notice]%>
       <div class='alert'>
         <div id="notice"><%= flash[:notice] %></div>
       </div>
+    <% end %>
       <div class="item_preview">
         <img alt="Default-home2" src="../images/image/default-Home2.jpg?1230682441" />
       </div>
     </div>
     <div id="sidebar">
-      <h3><%= logged_in_user.username %></h3>
+      <h3><%= logged_in_user.username.upcase %></h3>
       <div class="content">
         <a href="/user/lovelyfrog"><img alt="Default-profile" height="80" src="../images/image/default-Profile.jpg?1230682441" width="80" /></a>
         <br />
         <small>Member Since</small>
-        January 2009
+        <%= logged_in_user.created_at.strftime("%Y年－%m月") %>
       </div>
     </div>
     <div style="clear:both;"></div>
